Updated to support pageable result sets.